--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -54,10 +54,10 @@
       <hr>
       <footer class="card">
       <p>&copy; {{ site.time | date: '%Y' }} Power by <a href="http://www.iu-model.com" target="_blank" title="The blog power by iu-model company" >Infinate Undiscovery Model Co.,Ltd </a>
-      <a href="http://github.com/Seeed-Studio" rel="nofollow" target='_blank' title='Fork us on GitHub'><img width="25" height="25" title="Fork us on GitHub " alt="GitHub" src="images/github.png"></a>
-      <a href="http://www.weibo.com/seeedstudio" rel="nofollow" target='_blank' title='Read our Sina Blog'><img width="25" height="25" title="Read our Sina Blog " alt="WeiBo" src="images/weibo.png"></a>
-      <a href="http://www.facebook.com/pages/Seeed-Studio/164806146894658" rel="nofollow" target='_blank' title='Like us on Facebook'><img width="25" height="25" title=" Like us on Facebook " alt="Facebook" src="images/fb.png"></a>
-      <a href="http://twitter.com/seeedstudio" rel="nofollow" target='_blank' title='Follow us on Twitter'><img width="25" height="25" title="Follow us on Twitter " alt="Tweeter" src="images/twt.png"></a>
+      <a href="http://github.com/iu-model" rel="nofollow" target='_blank' title='Fork us on GitHub'><img width="50" height="50" title="Fork us on GitHub " alt="GitHub" src="images/github.png"></a>
+      <a href="http://www.weibo.com/iu-model" rel="nofollow" target='_blank' title='Read our Sina Blog'><img width="50" height="50" title="Read our Sina Blog " alt="WeiBo" src="images/weibo.png"></a>
+      <a href="http://www.facebook.com/pages/iu-model" rel="nofollow" target='_blank' title='Like us on Facebook'><img width="50" height="50" title=" Like us on Facebook " alt="Facebook" src="images/fb.png"></a>
+      <a href="http://twitter.com/iu-model" rel="nofollow" target='_blank' title='Follow us on Twitter'><img width="50" height="50" title="Follow us on Twitter " alt="Tweeter" src="images/twt.png"></a>
       
       
       </p>
