--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -59,6 +59,8 @@
       <a href="http://www.facebook.com/pages/iu-model" rel="nofollow" target='_blank' title='Like us on Facebook'><img width="32" height="32" title=" Like us on Facebook " alt="Facebook" src="images/fb.png"></a>
       <a href="http://twitter.com/iu-model" rel="nofollow" target='_blank' title='Follow us on Twitter'><img width="32" height="32" title="Follow us on Twitter " alt="Tweeter" src="images/twt.png"></a>
       
+      <a href="http://twitter.com/iu-model" rel="nofollow" target='_blank' title='Follow us on Linkedin'><img width="32" height="32" title="Our linkdein page " alt="Linkdein" src="images/linkin.png"></a>
+      
       
       </p>
       </footer>
