--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -40,15 +40,15 @@
     <div class="pagination card clearfix">
       <ul class = "pull-right">
       {% if page.previous %}
-        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; 前一篇</a></li>
+        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Pre</a></li>
       {% else %}
-        <li class="prev disabled"><a>&larr; 前一篇</a></li>
+        <li class="prev disabled"><a>&larr; Pre</a></li>
       {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">所有日志</a></li>
+        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">ALL</a></li>
       {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">后一篇 &rarr;</a></li>
+        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
       {% else %}
-        <li class="next disabled"><a>后一篇 &rarr;</a>
+        <li class="next disabled"><a>Next &rarr;</a>
       {% endif %}
       </ul>
     </div>
