--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -57,14 +57,17 @@
       <!--
       <a href="http://github.com/iu-model" rel="nofollow" target='_blank' title='Fork us on GitHub'><img width="32" height="32" title="Fork us on GitHub " alt="GitHub" src="/images/github.png"></a>
       -->
-      <a href="	https://www.facebook.com/iumodel" rel="nofollow" target='_blank' title='Like us on Facebook'><img width="32" height="32" title=" Like us on Facebook " alt="Facebook" src="/images/fb.png"> </a>
-      <a href="http://twitter.com/iu-model" rel="nofollow" target='_blank' title='Follow us on Twitter'><img width="32" height="32" title="Follow us on Twitter " alt="Tweeter" src="/images/twt.png"> </a>
+      <a href="https://www.facebook.com/iumodel" rel="nofollow" target='_blank' title='Like us on Facebook'><img width="32" height="32" title=" Like us on Facebook " alt="Facebook" src="/images/fb.png"> </a>
       
-      <a href="	https://twitter.com/qledrun" rel="nofollow" target='_blank' title='Follow us on Linkedin'><img width="32" height="32" title="Our linkdein page " alt="Linkdein" src="/images/linkin.png"></a>
+      <a href="http://twitter.com/qledrun" rel="nofollow" target='_blank' title='Follow us on Twitter'><img width="32" height="32" title="Follow us on Twitter " alt="Tweeter" src="/images/twt.png"> </a>
       
-      <a href="https://plus.google.com/u/1/115146642950545798104/posts" rel="nofollow" target='_blank' title='Follow us on Google+'><img width="32" height="32" title="Our google page " alt="iu-model google+" src="/images/logo/g+.png"></a>
+      <a href="http://www.linkedin.com/company/infinate-undiscovey-model-co-ltd?trk=top_nav_home" rel="nofollow" target='_blank' title='Follow us on Linkedin'><img width="32" height="32" title="Our linkdein page " alt="Linkdein" src="/images/linkin.png"></a>
+      
+      <a href="https://plus.google.com/u/1/115146642950545798104/posts" rel="nofollow" target='_blank' title='Follow us on Google+'><img width="32" height="32" title="Our google page " alt="iu-model google+" src="/images/logo/go+.jpg"></a>
 
-      <a href="http://twitter.com/iu-model" rel="nofollow" target='_blank' title='Follow us on Reddit'><img width="32" height="32" title="Our reddit news " alt="iu-model reddit news" src="/images/reddit.png"></a>
+      <a href="http://twitter.com/iu-model" rel="nofollow" target='_blank' title='Follow us on Reddit'><img width="32" height="32" title="Our reddit news " alt="iu-model reddit news" src="/images/logo/reddit.jpg"></a>
+
+      <a href="http://twitter.com/iu-model" rel="nofollow" target='_blank' title='Follow us on Reddit'><img width="32" height="32" title="Our reddit news " alt="iu-model reddit news" src="/images/logo/wp.png"></a>
       
       </p>
       </footer>
