--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -8,7 +8,8 @@
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
+    <a href="https://plus.google.com/105779700021101593841" rel="publisher">Google+</a>
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
