--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -54,7 +54,7 @@
       </div>
       <hr>
       <footer class="card">
-      <p>&copy; {{ site.time | date: '%Y' }} Power by <a href="http://www.iu-model.com" target="_blank" title="Infinate Undiscovey Model Co.,Ltd" > <img width="145" height="64" alt="iu-model" src="/images/headlogo/lol.jpg">         </a>
+      <p>&copy; {{ site.time | date: '%Y' }} Power by <a href="http://www.iu-model.com" target="_blank" title="IU MODEL" > <img width="145" height="64" alt="infinate undiscovery model" src="/images/headlogo/lol.jpg">         </a>
       <!--
       <a href="http://github.com/iu-model" rel="nofollow" target='_blank' title='Fork us on GitHub'><img width="32" height="32" title="Fork us on GitHub " alt="GitHub" src="/images/github.png"></a>
       -->
