--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -56,8 +56,8 @@
       </div>
       
       <footer class="card">
-        <p>&copy; 2011 {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+        <p>&copy; 2014 {{ site.author.name }}
+          with help from <a href="http://www.iu-model.com" target="_blank" title="IU Model - your best choice for rc model">IU Model</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
       </footer>
