--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -13,6 +13,8 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link rel="Shortcut Icon" href="favicon.ico" />
+
 
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
