--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -8,6 +8,9 @@
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     
+    <meta name="keywords" content="RC Zone,rc model zone,rc-zone" />
+    <meta name="description" content="RC-Zone is a funny worldwide rc model world." />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
